test/classes/delete-free/ownership-generic-without-init.good
ownership-generic-without-init.chpl:2: warning: field is declared with generic memory management
ownership-generic-without-init.chpl:2: note: consider adding 'owned', 'shared', or 'borrowed'
ownership-generic-without-init.chpl:2: note: if generic memory management is desired, use a 'type' field to store the class type
ownership-generic-without-init.chpl:4: error: unresolved call 'C.init(nil)'
ownership-generic-without-init.chpl:1: note: this candidate did not match: C.init(x: C)
ownership-generic-without-init.chpl:4: note: because actual argument #1 with type 'nil'
ownership-generic-without-init.chpl:2: note: is passed to formal 'in x: C'

