test/classes/delete-free/ownership-generic-without-init.bad
ownership-generic-without-init.chpl:4: error: unresolved call 'C.init(nil)'
ownership-generic-without-init.chpl:1: note: this candidate did not match: C.init(x: C)
ownership-generic-without-init.chpl:4: note: because actual argument #1 with type 'nil'
ownership-generic-without-init.chpl:2: note: is passed to formal 'in x: C'
